--- a/tests/unit/qsortb.html
+++ b/tests/unit/qsortb.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <title></title>
-    <script src="../../thirdparty/uglifyjs.1.2.5.js" type="text/javascript"></script>
-    <script src="../../src/analysis.js" type="text/javascript"></script>
-    <script src="../../src/InputManager.js" type="text/javascript"></script>
-    <script src="../../src/instrument.js" type="text/javascript"></script>
+    <script src="../../src/js/analysis.js" type="text/javascript"></script>
+    <script src="../../src/js/InputManager.js" type="text/javascript"></script>
+    <script src="../../src/js/instrument/esnstrument.js" type="text/javascript"></script>
 <!--    <script src="../../jalangi_tmp/src/inputs.js" type="text/javascript"></script>  -->
     <script src="qsortb_jalangi_.js" type="text/javascript"></script>
 </head>
