--- a/tests/tizen/annex/index_jalangi_.html
+++ b/tests/tizen/annex/index_jalangi_.html
@@ -13,10 +13,9 @@
     <title></title>
 
     <meta id="viewport_meta" name="viewport" content="" />
-    <script src="../../../thirdparty/uglifyjs.1.2.5.js" type="text/javascript"></script>
-    <script src="../../../src/analysis.js" type="text/javascript"></script>
-    <script src="../../../src/InputManager.js" type="text/javascript"></script>
-    <script src="../../../src/instrument.js" type="text/javascript"></script>
+    <script src="../../../src/js/analysis.js" type="text/javascript"></script>
+    <script src="../../../src/js/InputManager.js" type="text/javascript"></script>
+    <script src="../../../src/js/instrument/esnstrument.js" type="text/javascript"></script>
 
     <script type="text/javascript">
         var viewport_meta = document.getElementById('viewport_meta');
