added two more web apps to README.md

--- a/tests/tizen/go/index.html
+++ b/tests/tizen/go/index.html
@@ -10,9 +10,9 @@
 <html>
   <head>
       <script src="../../../thirdparty/uglifyjs.1.2.5.js" type="text/javascript"></script>
-      <script src="../../../src/analysis.js" type="text/javascript"></script>
-      <script src="../../../src/InputManager.js" type="text/javascript"></script>
-      <script src="../../../src/instrument.js" type="text/javascript"></script>
+      <script src="../../../src/js/analysis.js" type="text/javascript"></script>
+      <script src="../../../src/js/InputManager.js" type="text/javascript"></script>
+      <script src="../../../src/js/instrument/esnstrument.js" type="text/javascript"></script>
 
       <meta id="viewport_meta" name="viewport" content="" />
     <script type="text/javascript">
