--- a/tests/tizen/calculator/index_jalangi_.html
+++ b/tests/tizen/calculator/index_jalangi_.html
@@ -12,10 +12,9 @@
     <meta name="viewport" content="width=device-width target-densitydpi=device-dpi initial-scale=1 maximum-scale=1 user-scalable=0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Scientific Calculator</title>
-    <script src="../../../thirdparty/uglifyjs.1.2.5.js" type="text/javascript"></script>
-    <script src="../../../src/analysis.js" type="text/javascript"></script>
-    <script src="../../../src/InputManager.js" type="text/javascript"></script>
-    <script src="../../../src/instrument.js" type="text/javascript"></script>
+    <script src="../../../src/js/analysis.js" type="text/javascript"></script>
+    <script src="../../../src/js/InputManager.js" type="text/javascript"></script>
+    <script src="../../../src/js/instrument/esnstrument.js" type="text/javascript"></script>
 
     <link rel="stylesheet" id="stylesheet" type="text/css" href="css/calc_portrait.css"/>
 </head>
