Revert "Make paths.js work in the browser"
This reverts commit 0e79551d84fa882d895e3902e3d7c63572f5c20d.

The commit introduced several bugs and was unclean

--- a/tests/tizen/annex/index_jalangi_.html
+++ b/tests/tizen/annex/index_jalangi_.html
@@ -13,8 +13,6 @@
     <title></title>
 
     <meta id="viewport_meta" name="viewport" content="" />
-    <script src="../../../thirdparty/esprima/esprima.js"></script>
-    <script src="../../../src/js/utils/paths.js"/>
     <script src="../../../src/js/analysis.js" type="text/javascript"></script>
     <script src="../../../src/js/InputManager.js" type="text/javascript"></script>
     <script src="../../../src/js/instrument/esnstrument.js" type="text/javascript"></script>
@@ -27,7 +25,7 @@
     <meta name="author" content="Xinchao He">
     <link rel="stylesheet" href="css/annex.css"/>
     <link rel="stylesheet" type="text/css" href="css/license.css"></link>
-    <!--script src="js/license.js"></script-->
+    <script src="js/license.js"></script>
     <script type="text/javascript" src="lib/jquery-1.6.2.min.js"></script>
     <script type="text/javascript" src="js/annex_jalangi_.js"></script>
 </head>
