Fix bug requireing the presence of dot in config

--- a/tests/tizen/annex/index_jalangi_.html
+++ b/tests/tizen/annex/index_jalangi_.html
@@ -148,5 +148,8 @@
 <audio preload="auto" id="snd_victoryhorns">
     <source src="sounds/VictoryHorns.ogg" />
 </audio>
+<script>
+$("#open1").click()
+</script>
 </body>
 </html>
