--- a/tests/tizen/calculator/index_jalangi_.html
+++ b/tests/tizen/calculator/index_jalangi_.html
@@ -14,6 +14,8 @@
     <title>Scientific Calculator</title>
     <script src="../../../src/js/analysis.js" type="text/javascript"></script>
     <script src="../../../src/js/InputManager.js" type="text/javascript"></script>
+    <script src="../../../node_modules/escodegen/escodegen.browser.js" type="text/javascript"></script>
+    <script src="../../../node_modules/esprima/esprima.js" type="text/javascript"></script>
     <script src="../../../src/js/instrument/esnstrument.js" type="text/javascript"></script>
 
     <link rel="stylesheet" id="stylesheet" type="text/css" href="css/calc_portrait.css"/>
