reverted back annex

--- a/tests/tizen/annex/index_jalangi_.html
+++ b/tests/tizen/annex/index_jalangi_.html
@@ -15,6 +15,8 @@
     <meta id="viewport_meta" name="viewport" content="" />
     <script src="../../../src/js/analysis.js" type="text/javascript"></script>
     <script src="../../../src/js/InputManager.js" type="text/javascript"></script>
+    <script src="../../../node_modules/escodegen/escodegen.browser.js" type="text/javascript"></script>
+    <script src="../../../node_modules/esprima/esprima.js" type="text/javascript"></script>
     <script src="../../../src/js/instrument/esnstrument.js" type="text/javascript"></script>
 
     <script type="text/javascript">
@@ -26,7 +28,7 @@
     <link rel="stylesheet" href="css/annex.css"/>
     <link rel="stylesheet" type="text/css" href="css/license.css"></link>
     <script src="js/license.js"></script>
-    <script type="text/javascript" src="lib/jquery-1.6.2.min.js"></script>
+    <script type="text/javascript" src="lib/jquery-1.6.2.min_jalangi_.js"></script>
     <script type="text/javascript" src="js/annex_jalangi_.js"></script>
 </head>
 <body onselectstart="return false" ondragstart="return false" style="overflow:hidden;">
@@ -148,8 +150,5 @@
 <audio preload="auto" id="snd_victoryhorns">
     <source src="sounds/VictoryHorns.ogg" />
 </audio>
-<script>
-$("#open1").click()
-</script>
 </body>
 </html>
