fixed a subtle error in analysis.js in calling constructor when the prototype of a constructor can be ConcolicValue

--- a/tests/tizen/calculator/index_jalangi_.html
+++ b/tests/tizen/calculator/index_jalangi_.html
@@ -730,10 +730,10 @@ return ret;
 </body>
 
 <!-- external library js files -->
-<script src="js/jquery-1.7.2.min.js"></script>
+<script src="js/jquery-1.7.2.min_jalangi_.js"></script>
 <script src="js/localizer.js"></script>
 <script src="js/iscroll.js"></script>
-<script src="js/peg-0.6.2.min.js"></script>
+<script src="js/peg-0.6.2.min_jalangi_.js"></script>
 
 <!-- internal js file -->
 <script src="js/license.js"></script>
