--- a/tests/tizen/go/index.html
+++ b/tests/tizen/go/index.html
@@ -11,6 +11,8 @@
   <head>
       <script src="../../../src/js/analysis.js" type="text/javascript"></script>
       <script src="../../../src/js/InputManager.js" type="text/javascript"></script>
+      <script src="../../../node_modules/escodegen/escodegen.browser.js" type="text/javascript"></script>
+      <script src="../../../node_modules/esprima/esprima.js" type="text/javascript"></script>
       <script src="../../../src/js/instrument/esnstrument.js" type="text/javascript"></script>
 
       <meta id="viewport_meta" name="viewport" content="" />
