added instrumented jquery to go tizen game.

--- a/tests/tizen/go/index.html
+++ b/tests/tizen/go/index.html
@@ -26,7 +26,7 @@
 	<link rel="stylesheet" href="css/go.css"/>
         <link rel="stylesheet" type="text/css" href="css/license.css"></link>
         <script src="js/license.js"></script>
-	<script type="text/javascript" src="lib/jquery-1.7.1.min.js"></script>
+	<script type="text/javascript" src="lib/jquery-1.7.1.min_jalangi_.js"></script>
 	<script type="text/javascript" src="js/sound.js"></script>
 	<script type="text/javascript" src="js/go_jalangi_.js"></script>
   </head>
