remove Jalangi modifications from index.html files

--- a/tests/tizen/shoppinglist/index.html
+++ b/tests/tizen/shoppinglist/index.html
@@ -8,11 +8,6 @@ http://www.apache.org/licenses/LICENSE-2.0
 -->
 <html>
     <head>
-        <script src="../../../thirdparty/uglifyjs.1.2.5.js" type="text/javascript"></script>
-        <script src="../../../src/analysis.js" type="text/javascript"></script>
-        <script src="../../../src/InputManager.js" type="text/javascript"></script>
-        <script src="../../../src/instrument.js" type="text/javascript"></script>
-
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width target-densitydpi=device-dpi initial-scale=1 maximum-scale=1 user-scalable=0" />
         <title>Shopping List</title>
@@ -526,27 +521,27 @@ http://www.apache.org/licenses/LICENSE-2.0
     </body>
 
 
-    <script src="js/jquery-1.7.2.min_jalangi_.js"></script>
+    <script src="js/jquery-1.7.2.min.js"></script>
     <script src="js/license.js"></script>
-    <script src="js/help_jalangi_.js"></script>
-    <script src="js/iscroll_jalangi_.js"></script>
-    <script src="js/dbmanager_jalangi_.js"></script>
-    <script src="js/Localizer_jalangi_.js"></script>
-    <script src="js/helper_jalangi_.js"></script>
-    <script src="js/InfoDialog_jalangi_.js"></script>
-    <script src="js/OptionsDialog_jalangi_.js"></script>
-    <script src="js/ListSelectionDialog_jalangi_.js"></script>
-    <script src="js/StoreSelectionDialog_jalangi_.js"></script>
-    <script src="js/SortbyDialog_jalangi_.js"></script>
-    <script src="js/AddStoreDialog_jalangi_.js"></script>
-    <script src="js/EditListScreen_jalangi_.js"></script>
-    <script src="js/EditItemScreen_jalangi_.js"></script>
-    <script src="js/AddFromFavoritesView_jalangi_.js"></script>
-    <script src="js/PhotoFullScreenView_jalangi_.js"></script>
-    <script src="js/main_jalangi_.js"></script>
-    <script src="js/en_default_jalangi_.js"></script>
-    <script src="js/tizenapplicationservice_jalangi_.js"></script>
-    <script src="js/FileSystem_jalangi_.js"></script>
+    <script src="js/help.js"></script>
+    <script src="js/iscroll.js"></script>
+    <script src="js/dbmanager.js"></script>
+    <script src="js/Localizer.js"></script>
+    <script src="js/helper.js"></script>
+    <script src="js/InfoDialog.js"></script>
+    <script src="js/OptionsDialog.js"></script>
+    <script src="js/ListSelectionDialog.js"></script>
+    <script src="js/StoreSelectionDialog.js"></script>
+    <script src="js/SortbyDialog.js"></script>
+    <script src="js/AddStoreDialog.js"></script>
+    <script src="js/EditListScreen.js"></script>
+    <script src="js/EditItemScreen.js"></script>
+    <script src="js/AddFromFavoritesView.js"></script>
+    <script src="js/PhotoFullScreenView.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/en_default.js"></script>
+    <script src="js/tizenapplicationservice.js"></script>
+    <script src="js/FileSystem.js"></script>
     
 </html>
 
