--- a/tests/tizen/tenframe/index.html
+++ b/tests/tizen/tenframe/index.html
@@ -9,11 +9,6 @@
 -->
 <html>
 <head>
-    <script src="../../../thirdparty/uglifyjs.1.2.5.js" type="text/javascript"></script>
-    <script src="../../../src/analysis.js" type="text/javascript"></script>
-    <script src="../../../src/InputManager.js" type="text/javascript"></script>
-    <script src="../../../src/instrument.js" type="text/javascript"></script>
-
     <meta id="viewport_meta" name="viewport" content="" />
     <script type="text/javascript">
         var viewport_meta = document.getElementById('viewport_meta');
@@ -237,12 +232,12 @@ If you want to try another game, or start the current one over, just click the d
     <audio class="pirate_bgloop" loop="loop" preload="auto"><source src="audio/ocean.ogg" type="audio/ogg" /></audio>
     <script src="js/jquery-1.7.2.min.js"></script>
     <script src="js/license.js"></script>
-    <script src="js/help_jalangi_.js"></script>
-    <script src="js/animation_jalangi_.js"></script>
-    <script src="js/main_jalangi_.js"></script>
-    <script src="js/sound_jalangi_.js"></script>
-    <script src="js/pirates_jalangi_.js"></script>
-    <script src="js/rockets_jalangi_.js"></script>
-    <script src="js/bowling_jalangi_.js"></script>
+    <script src="js/help.js"></script>
+    <script src="js/animation.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/sound.js"></script>
+    <script src="js/pirates.js"></script>
+    <script src="js/rockets.js"></script>
+    <script src="js/bowling.js"></script>
 </body>
 </html>
