--- a/tests/tizen/calculator/index.html
+++ b/tests/tizen/calculator/index.html
@@ -12,11 +12,6 @@
         <meta name="viewport" content="width=device-width target-densitydpi=device-dpi initial-scale=1 maximum-scale=1 user-scalable=0" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Scientific Calculator</title>
-        <script src="../../../thirdparty/uglifyjs.1.2.5.js" type="text/javascript"></script>
-        <script src="../../../src/analysis.js" type="text/javascript"></script>
-        <script src="../../../src/InputManager.js" type="text/javascript"></script>
-        <script src="../../../src/instrument.js" type="text/javascript"></script>
-
         <link rel="stylesheet" id="stylesheet" type="text/css" href="css/calc_portrait.css"/>
     </head>
     <body>
@@ -737,6 +732,6 @@
     <!-- internal js file -->
     <script src="js/license.js"></script>
     <script src="js/help.js"></script>
-    <script src="js/calc_jalangi_.js"></script>
+    <script src="js/calc.js"></script>
 </html>
 
