--- a/tests/tizen/go/index.html
+++ b/tests/tizen/go/index.html
@@ -9,12 +9,6 @@
 -->
 <html>
   <head>
-      <script src="../../../src/js/analysis.js" type="text/javascript"></script>
-      <script src="../../../src/js/InputManager.js" type="text/javascript"></script>
-      <script src="../../../node_modules/escodegen/escodegen.browser.js" type="text/javascript"></script>
-      <script src="../../../node_modules/esprima/esprima.js" type="text/javascript"></script>
-      <script src="../../../src/js/instrument/esnstrument.js" type="text/javascript"></script>
-
       <meta id="viewport_meta" name="viewport" content="" />
     <script type="text/javascript">
         var viewport_meta = document.getElementById('viewport_meta');
@@ -26,9 +20,9 @@
 	<link rel="stylesheet" href="css/go.css"/>
         <link rel="stylesheet" type="text/css" href="css/license.css"></link>
         <script src="js/license.js"></script>
-	<script type="text/javascript" src="lib/jquery-1.7.1.min_jalangi_.js"></script>
+	<script type="text/javascript" src="lib/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="js/sound.js"></script>
-	<script type="text/javascript" src="js/go_jalangi_.js"></script>
+	<script type="text/javascript" src="js/go.js"></script>
   </head>
   <body onselectstart="return false" ondragstart="return false" style="overflow:hidden;">
     <div id="licensepage" style="display: none">
