--- a/tests/tizen/todolist/index.html
+++ b/tests/tizen/todolist/index.html
@@ -9,11 +9,6 @@
 -->
 <html>
 <head>
-    <script src="../../../thirdparty/uglifyjs.1.2.5.js" type="text/javascript"></script>
-    <script src="../../../src/analysis.js" type="text/javascript"></script>
-    <script src="../../../src/InputManager.js" type="text/javascript"></script>
-    <script src="../../../src/instrument.js" type="text/javascript"></script>
-
     <title>TODO List</title>
 <meta name="viewport" content="width=device-width target-densitydpi=device-dpi initial-scale=1 maximum-scale=1 user-scalable=0" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -530,9 +525,9 @@
 <script type="text/javascript" src="js/helper.js"></script>
 <script type="text/javascript" src="js/contextmenu.js"></script>
 <script type="text/javascript" src="js/movetodate.js"></script>
-<script type="text/javascript" src="js/todo-backend_jalangi_.js"></script>
+<script type="text/javascript" src="js/todo-backend.js"></script>
 <script type="text/javascript" src="js/settings-backend.js"></script>
-<script type="text/javascript" src="js/todo_jalangi_.js"></script>
+<script type="text/javascript" src="js/todo.js"></script>
 <script type="text/javascript" src="js/iscroll-lite.js"></script>
 <script type="text/javascript" src="js/en_default.js"></script>
 </html>
