--- a/tests/tizen/annex/index_jalangi_.html
+++ b/tests/tizen/annex/index_jalangi_.html
@@ -17,6 +17,7 @@
     <script src="../../../src/js/InputManager.js" type="text/javascript"></script>
     <script src="../../../node_modules/escodegen/escodegen.browser.js" type="text/javascript"></script>
     <script src="../../../node_modules/esprima/esprima.js" type="text/javascript"></script>
+    <script src="../../../src/js/utils/astUtil.js" type="text/javascript"></script>
     <script src="../../../src/js/instrument/esnstrument.js" type="text/javascript"></script>
 
     <script type="text/javascript">
