re-organize tests

--- a/tests/html/jquery-2.0.2/unit1/index.html
+++ b/tests/html/jquery-2.0.2/unit1/index.html
@@ -4,7 +4,7 @@
 
 <title>JQuery test</title></head>
 <body>
-<script src="jquery-2.0.2.js"></script>
+<script src="../jquery-2.0.2.js"></script>
 <script>
 	var markup = jQuery(
 		"<div><div><p><span><b class=\"a\">b</b></span></p></div></div>"
