--- a/tests/html/jquery-2.0.2/unit1/index_jalangi_.html
+++ b/tests/html/jquery-2.0.2/unit1/index_jalangi_.html
@@ -4,7 +4,14 @@
 
 <title>JQuery test</title></head>
 <body>
-<script src="jquery-2.0.2.js"></script>
+    <script src="../../../src/js/analysis.js" type="text/javascript"></script>
+    <script src="../../../src/js/InputManager.js" type="text/javascript"></script>
+    <script src="../../../node_modules/escodegen/escodegen.browser.js" type="text/javascript"></script>
+    <script src="../../../node_modules/esprima/esprima.js" type="text/javascript"></script>
+    <script src="../../../src/js/utils/astUtil.js" type="text/javascript"></script>
+    <script src="../../../src/js/instrument/esnstrument.js" type="text/javascript"></script>
+
+<script src="../jquery-2.0.2_jalangi_.js"></script>
 <script>
 	var markup = jQuery(
 		"<div><div><p><span><b class=\"a\">b</b></span></p></div></div>"
