--- a/tests/html/jquery-2.0.2/justload/index_jalangi_.html
+++ b/tests/html/jquery-2.0.2/justload/index_jalangi_.html
@@ -4,12 +4,12 @@
 
 </head>
 <body>
-    <script src="../../../src/js/analysis.js" type="text/javascript"></script>
-    <script src="../../../src/js/InputManager.js" type="text/javascript"></script>
-    <script src="../../../node_modules/escodegen/escodegen.browser.js" type="text/javascript"></script>
-    <script src="../../../node_modules/esprima/esprima.js" type="text/javascript"></script>
-    <script src="../../../src/js/utils/astUtil.js" type="text/javascript"></script>
-    <script src="../../../src/js/instrument/esnstrument.js" type="text/javascript"></script>
+    <script src="../../../../src/js/analysis.js" type="text/javascript"></script>
+    <script src="../../../../src/js/InputManager.js" type="text/javascript"></script>
+    <script src="../../../../node_modules/escodegen/escodegen.browser.js" type="text/javascript"></script>
+    <script src="../../../../node_modules/esprima/esprima.js" type="text/javascript"></script>
+    <script src="../../../../src/js/utils/astUtil.js" type="text/javascript"></script>
+    <script src="../../../../src/js/instrument/esnstrument.js" type="text/javascript"></script>
 
 <script src="../jquery-2.0.2_jalangi_.js"></script>
 </body>
