bundled index.html for dsjs.js

--- a/src/js/analyses2/dsjs/index.html
+++ b/src/js/analyses2/dsjs/index.html
@@ -48,11 +48,11 @@
             .append("g")
             .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-    d3.json("data.json", function (error, flare) {
-        flare.x0 = 0;
+    /*    d3.json("data.json", function (error, flare) {
+     flare.x0 = 0;
         flare.y0 = 0;
         update(root = flare);
-    });
+     }); */
 
     function update(source) {
 
